# mediator

./: .gitignore  CMakeLists.txt  README.md
build-wsl/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-wsl/Testing/Temporary/: CTestCostData.txt
build-wsl/proto_gen/: mediator.grpc.pb.cc  mediator.grpc.pb.h  mediator.pb.cc  mediator.pb.h
build-wsl/tests/: CTestTestfile.cmake  cmake_install.cmake  mediator_tests[1]_include.cmake  mediator_tests[1]_tests.cmake
build-wsl/tests/wasm/: auth_allow.wasm  auth_trap.wasm
build-wsl/tools/: cmake_install.cmake
docs/: design.md
proto/: mediator.proto
scripts/: check_gdb_log.sh  check_wat.py  debug_apm_gdb.sh  debug_apm_gdb2.sh  debug_convai.sh  debug_e2e.sh  debug_flaky.sh  debug_flaky2.sh  run_android_interop.sh  run_e2e.sh  run_e2e_convai.sh  stress_e2e.sh  symbolize.sh  test_symbolize.sh
src/: gateway.cpp  gateway.h  main.cpp
src/audio/: ai_audio.h  align.cpp  align.h  apm_wrapper.cpp  apm_wrapper.h  audio_pipeline.cpp  audio_pipeline.h  calib_estimator.h  despike.h  g711.cpp  g711.h  watermark.cpp  watermark.h
src/core/: channel.h  clock.cpp  clock.h  log.h  priority_timer.cpp  priority_timer.h  reactor.cpp  reactor.h  thread_pool.h
src/crash/: crash_handler.cpp  crash_handler.h
src/engine/: blackboard.cpp  blackboard.h  heartbeat_engine.cpp  heartbeat_engine.h  message.cpp  message.h
src/ext/: auth_provider.cpp  auth_provider.h  hs256.cpp  hs256.h  protocol_plugin.cpp  protocol_plugin.h  wasm3_host.cpp  wasm3_host.h  wasm_bus.cpp  wasm_bus.h
src/net/: grpc_clients.cpp  grpc_clients.h  ws_server.cpp  ws_server.h
src/session/: context_evict.cpp  context_evict.h  redis_store.cpp  redis_store.h
src/telemetry/: metrics_server.cpp  metrics_server.h  otlp_exporter.cpp  otlp_exporter.h  telemetry.cpp  telemetry.h
tests/: CMakeLists.txt  test_align.cpp  test_auth.cpp  test_channel.cpp  test_context_evict.cpp  test_g711.cpp  test_heartbeat.cpp  test_protocol_plugin.cpp  test_reactor.cpp  test_telemetry.cpp  test_timer.cpp  test_wasm3.cpp  test_wasm_bus.cpp  test_watermark.cpp
tests/wasm/: auth_allow.wat  auth_trap.wat  convai_proto.wat  msg_counter.wat  msg_trap.wat
tools/: CMakeLists.txt
tools/convai_sim/: main.cpp
tools/e2e_client/: main.cpp
tools/mock_services/: main.cpp
